--added new areas

--- a/www/areas.html
+++ b/www/areas.html
@@ -47,6 +47,18 @@
 				<a href="volcano.html"><img src="img/areas/volcano.jpg" /></a>
 				<div class="caption">Volcano</div>
 			</div>
+			<div class="ui-block-a">
+				<a href="tower.html"><img src="img/areas/tower2.jpg" /></a>
+				<div class="caption">Tower 3</div>
+			</div>
+			<div class="ui-block-b">
+				<a href="sacredLand.html"><img src="img/areas/sLand.jpg" /></a>
+				<div class="caption">Sacred Land</div>
+			</div>
+			<div class="ui-block-a">
+				<a href="taintedSea.html"><img src="img/areas/tSea.png" /></a>
+				<div class="caption">Tainted Sea</div>
+			</div>
 		</div>
 		
         <script type="text/javascript" src="cordova.js"></script>
