--updated/added a few area/element/monster images

--- a/www/areas.html
+++ b/www/areas.html
@@ -40,7 +40,7 @@
 				<div class="caption">Tundra</div>
 			</div>
 			<div class="ui-block-a">
-				<a href="ruins.html"><img src="img/areas/uRuin.png" /></a>
+				<a href="ruins.html"><img src="img/areas/uRuin.jpg" /></a>
 				<div class="caption">Underwater Ruin</div>
 			</div>
 			<div class="ui-block-b">
@@ -48,7 +48,7 @@
 				<div class="caption">Volcano</div>
 			</div>
 			<div class="ui-block-a">
-				<a href="tower.html"><img src="img/areas/tower3.jpg" /></a>
+				<a href="tower.html"><img src="img/areas/tower3.png" /></a>
 				<div class="caption">Tower 3</div>
 			</div>
 			<div class="ui-block-b">
