--- a/www/index.html
+++ b/www/index.html
@@ -5,12 +5,14 @@
         <meta charset="utf-8" />
         <meta name="format-detection" content="telephone=no" />        
 		<meta name="msapplication-tap-highlight" content="no" />
-		<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
+        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
         <link rel="stylesheet" type="text/css" href="css/jQuery/jquery.mobile-1.4.2.css" />
 		<script type="text/javascript" src="js/jQuery/jquery-1.8.2.min.js"></script>
 		<script type="text/javascript" src="js/jQuery/jquery.mobile-1.4.2.min.js"></script>
+        <script type="text/javascript" src="js/cordova.js"></script>
+        <script type="text/javascript" src="js/index.js"></script>
         <title>Hello World</title>
     </head>
     <body>
@@ -37,11 +39,10 @@
 			</li>
 		</ul>
 		
-        <!--<script type="text/javascript" src="cordova.js"></script>-->
-        <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
-            app.initialize();
-
+            $(function() {
+                app.initialize();
+            });
         </script>
     </body>
 </html>
