--- a/www/index.html
+++ b/www/index.html
@@ -13,6 +13,7 @@
 		<script type="text/javascript" src="js/jQuery/jquery.mobile-1.4.2.min.js"></script>
         <script type="text/javascript" src="js/cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
+        <script type="text/javascript" src="js/db.js"></script>
         <title>Hello World</title>
     </head>
     <body>
