--- a/www/armorList.html
+++ b/www/armorList.html
@@ -15,25 +15,25 @@
     <title>Hello World</title>
 </head>
 <body>
-
-<div id="armorContainer"></div>
+<ul id="armorList" data-role="listview"></ul>
 
 <script type="text/javascript">
     $(function() {
         setTimeout(function() {
-            var query = (document.location.search).replace('?armorId=','');
+            var query = (document.location.search).replace('?rank=','').split('&')[0];
 //            alert(query);
 
             var db = window.openDatabase("hunterpedia", "1.0", "hunterpedia", 1000000);
             db.transaction(function(tx) {
-                tx.executeSql('SELECT * FROM ARMOR WHERE id=' + query + '', [], function(rx, results) {
-//                    alert(results.rows.item(0).name);
-                    $('#armorContainer').append(
-                        '<h1>' + results.rows.item(0).name + '</h1>' +
-                        '<img src="img/highRankArmor/' + results.rows.item(0).img_alias + ".png" + '"><br>' +
-                        '<img src="img/gRankArmor/' + results.rows.item(0).img_alias + "_blademaster_pieces.png" + '"><br>' +
-                        '<img src="img/gRankArmor/' + results.rows.item(0).img_alias + "_blademaster_skills.png" + '">'
-                    );
+                tx.executeSql('SELECT * FROM ARMOR WHERE rank="' + query + '"', [], function(rx, results) {
+                    for (var i = 0; i < results.rows.length; i++) {
+//                        alert(results.rows.item(i).name);
+                        $('#armorList').append(
+                                '<li><a href="armorDetails.html?armorId=' + results.rows.item(i).id + '" class="selectedArmor">' +
+                                        '<h3>' + results.rows.item(i).name + '</h3>' +
+                                        '<img src="img/gRankArmor/' + results.rows.item(i).img_alias + "_blademaster_pieces.png" + '">' +
+                                        '</a></li>');
+                    }
                 }, function() {alert("INNER FAAAAIIIILLLL!")});
             }, function() {alert("OUTER FAAAAIIILLL!")});
         }, 1000);
