--- a/www/armorDetails.html
+++ b/www/armorDetails.html
@@ -27,12 +27,16 @@
             var db = window.openDatabase("hunterpedia", "1.0", "hunterpedia", 1000000);
             db.transaction(function(tx) {
                 tx.executeSql('SELECT * FROM ARMOR WHERE id=' + query + '', [], function(rx, results) {
-//                    alert(results.rows.item(0).name);
+                    var armor = results.rows.item(0);
+                    var http = new XMLHttpRequest();
+                    http.open('HEAD', 'img/highRankArmor/' + armor.img_alias + '.png', false);
+                    http.send();
+                    var image = (http.status == 200) ? results.rows.item(0).img_alias : "armorSilhouette";
                     $('#armorContainer').append(
-                        '<h1>' + results.rows.item(0).name + '</h1>' +
-                        '<img src="img/highRankArmor/' + results.rows.item(0).img_alias + ".png" + '"><br>' +
-                        '<img src="img/gRankArmor/' + results.rows.item(0).img_alias + "_blademaster_pieces.png" + '"><br>' +
-                        '<img src="img/gRankArmor/' + results.rows.item(0).img_alias + "_blademaster_skills.png" + '">'
+                        '<h1>' + armor.name + '</h1>' +
+                        '<img src="img/' + armor.rank + "RankArmor/" + image + '.png" width="100%" />' +
+                        '<img src="img/' + armor.rank + "RankArmor/" + armor.img_alias + '_blademaster_pieces.png" width="100%" />' +
+                        '<img src="img/' + armor.rank + "RankArmor/" + armor.img_alias + '_blademaster_skills.png" width="100%" />'
                     );
                 }, function() {alert("INNER FAAAAIIIILLLL!")});
             }, function() {alert("OUTER FAAAAIIILLL!")});
