--modified img selection logic in armorDetails --added/modified multiple images --added new entries into database --split monster details page into 3 sections --modified weapons page anchors to direct to same page --added weaponsDetails page

--- a/www/armorDetails.html
+++ b/www/armorDetails.html
@@ -29,7 +29,7 @@
                 tx.executeSql('SELECT * FROM ARMOR WHERE id=' + query + '', [], function(rx, results) {
                     var armor = results.rows.item(0);
                     var http = new XMLHttpRequest();
-                    http.open('HEAD', 'img/highRankArmor/' + armor.img_alias + '.png', false);
+                    http.open('HEAD', 'img/' + armor.rank + 'RankArmor/' + armor.img_alias + '.png', false);
                     http.send();
                     var image = (http.status == 200) ? armor.img_alias : "armorSilhouette";
                     $('#armorContainer').append(
