--- a/www/weapons.html
+++ b/www/weapons.html
@@ -11,62 +11,62 @@
         <link rel="stylesheet" type="text/css" href="css/jQuery/jquery.mobile-1.4.2.css" />
 		<script type="text/javascript" src="js/jQuery/jquery-1.8.2.min.js"></script>
 		<script type="text/javascript" src="js/jQuery/jquery.mobile-1.4.2.min.js"></script>
+        <script type="text/javascript" src="js/index.js"></script>
+        <script type="text/javascript" src="js/cordova.js"></script>
         <title>Hello World</title>
     </head>
     <body>
         <ul data-role="listview">
 			<li>
-				<a href="swordShield.html">
+				<a href="weaponDetails.html?weapon=?weapon=swordShield">
 					<img src="img/weapons/swordShield.png" />Sword and Shield</a>
 			</li>
 			<li>
-				<a href="dualBlades.html">
+                <a href="weaponDetails.html?weapon=dualBlades">
 					<img src="img/weapons/dualBlades.png" />Dual Blades</a>
 			</li>
 			<li>
-				<a href="longSword.html">
+                <a href="weaponDetails.html?weapon=longSword">
 					<img src="img/weapons/longSword.png" />LongSword</a>
 			</li>
 			<li>
-				<a href="greatSword.html">
+                <a href="weaponDetails.html?weapon=greatSword">
 					<img src="img/weapons/greatSword.png" />GreatSword</a>
 			</li>
 			<li>
-				<a href="hammer.html">
+                <a href="weaponDetails.html?weapon=hammer">
 					<img src="img/weapons/hammer.png" />Hammer</a>
 			</li>
 			<li>
-				<a href="horn.html">
+                <a href="weaponDetails.html?weapon=horn">
 					<img src="img/weapons/huntingHorn.png" />Hunting Horn</a>
 			</li>
 			<li>
-				<a href="lBowgun.html">
+                <a href="weaponDetails.html?weapon=lBowgun">
 					<img src="img/weapons/lBowgun.png" />Light Bowgun</a>
 			</li>
 			<li>
-				<a href="hBowgun.html">
+                <a href="weaponDetails.html?weapon=hBowgun">
 					<img src="img/weapons/hBowgun.png" />Heavy Bowgun</a>
 			</li>
 			<li>
-				<a href="lance.html">
+                <a href="weaponDetails.html?weapon=lance">
 					<img src="img/weapons/lance.png" />Lance</a>
 			</li>
 			<li>
-				<a href="gunlance.html">
+                <a href="weaponDetails.html?weapon=gunlance">
 					<img src="img/weapons/gunlance.png" />Gunlance</a>
 			</li>
 			<li>
-				<a href="switchAxe.html">
+                <a href="weaponDetails.html?weapon=switchAxe">
 					<img src="img/weapons/switchAxe.png" />Switch Axe</a>
 			</li>
 			<li>
-				<a href="bow.html">
+                <a href="weaponDetails.html?weapon=bow">
 					<img src="img/weapons/bow.png" />Bow</a>
 			</li>			
 		</ul>
 		
-        <script type="text/javascript" src="cordova.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
             app.initialize();
         </script>
