--- a/www/monsterDetails.html
+++ b/www/monsterDetails.html
@@ -16,7 +16,19 @@
 </head>
 <body>
 
-<div id="monsterContainer"></div>
+<div id="overviewContainer"></div>
+<div id="damageContainer" style="display: none;"></div>
+<div id="carvesContainer" style="display: none;"></div>
+
+<div data-role="footer" style="overflow: hidden;">
+    <div data-role="navbar" class="ui-state-persist">
+        <ul>
+            <li><a href="#" id="overviewToggle" class="ui-btn-active">Overview</a></li>
+            <li><a href="#" id="damageToggle">Damage</a></li>
+            <li><a href="#" id="carvesToggle">Carves</a></li>
+        </ul>
+    </div>
+</div>
 
 <script type="text/javascript">
     $(function() {
@@ -32,13 +44,39 @@
                     http.open('HEAD', 'img/' + monster.img_alias + '.png', false);
                     http.send();
                     var image = (http.status == 200) ? monster.img_alias : 'smallMonsters/' + monster.img_alias;
-                    $('#monsterContainer').append(
+                    $('#overviewContainer').append(
                         '<h1>' + monster.name + '</h1>' +
                         '<img src="img/' + image + '.png" alt="N/A" width="50%" style="display: block; margin: auto;" />'
+                    );
+                    $('#damageContainer').append(
+                            '<h1>' + monster.name + '</h1>' +
+                                    '<img src="img/' + image + 'Damage.png" alt="N/A" width="100%" style="display: block; margin: auto;" />'
+                    );
+                    $('#carvesContainer').append(
+                            '<h1>' + monster.name + '</h1>' +
+                                    '<img src="img/' + image + '.png" alt="N/A" width="100%" style="display: block; margin: auto;" />'
                     );
                 }, function() {alert("INNER FAAAAIIIILLLL!")});
             }, function() {alert("OUTER FAAAAIIILLL!")});
         }, 1000);
+
+        $('#overviewToggle').click(function() {
+            $('#overviewContainer').show();
+            $('#damageContainer').hide();
+            $('#carvesContainer').hide();
+        });
+
+        $('#damageToggle').click(function() {
+            $('#damageContainer').show();
+            $('#overviewContainer').hide();
+            $('#carvesContainer').hide();
+        });
+
+        $('#carvesToggle').click(function() {
+            $('#carvesContainer').show();
+            $('#overviewContainer').hide();
+            $('#damageContainer').hide();
+        });
     });
 </script>
 </body>
