--- a/www/armorList.html
+++ b/www/armorList.html
@@ -30,7 +30,7 @@
                         $('#armorList').append(
                             '<li><a href="armorDetails.html?armorId=' + armor.id + '">' +
                                 '<h3>' + armor.name + '</h3>' +
-                                '<img src="img/' + armor.rank + "RankArmor/" + armor.img_alias + "_blademaster_pieces.png" + '" width="100%" />' +
+                                '<img src="img/armor/' + armor.rank + "Rank/" + armor.img_alias + "_blademaster_pieces.png" + '" width="100%" />' +
                             '</a></li>'
                         );
                     }
