--- a/www/monsterDetails.html
+++ b/www/monsterDetails.html
@@ -21,7 +21,7 @@
 <div id="carvesContainer" style="display: none;"></div>
 
 <div data-role="footer" style="overflow: hidden;">
-    <div data-role="navbar" class="ui-state-persist">
+    <div data-role="navbar">
         <ul>
             <li><a href="#" id="overviewToggle" class="ui-btn-active">Overview</a></li>
             <li><a href="#" id="damageToggle">Damage</a></li>
