--- a/www/weaponDetails.html
+++ b/www/weaponDetails.html
@@ -19,30 +19,26 @@
 <div id="weaponContainer"></div>
 
 <script type="text/javascript">
-//    $(function() {
-//        setTimeout(function() {
-//            var query = (document.location.search).replace('?armorId=','');
-////            alert(query);
-//
-//            var db = window.openDatabase("hunterpedia", "1.0", "hunterpedia", 1000000);
-//            db.transaction(function(tx) {
-//                tx.executeSql('SELECT * FROM ARMOR WHERE id=' + query + '', [], function(rx, results) {
-//                    var armor = results.rows.item(0);
-//                    var http = new XMLHttpRequest();
-//                    http.open('HEAD', 'img/highRankArmor/' + armor.img_alias + '.png', false);
-//                    http.send();
-//                    var image = (http.status == 200) ? armor.img_alias : "armorSilhouette";
-//                    $('#armorContainer').append(
-//                            '<h1>' + armor.name + '</h1>' +
-//                                    '<img src="img/' + armor.rank + "RankArmor/" + image + '.png" width="100%" />' +
-//                                    '<img src="img/' + armor.rank + "RankArmor/" + armor.img_alias + '_blademaster_pieces.png" width="100%" />' +
-//                                    '<img src="img/' + armor.rank + "RankArmor/" + armor.img_alias + '_blademaster_skills.png" width="100%" />' +
-//                                    '<img src="img/' + armor.rank + "RankArmor/" + armor.img_alias + '_blademaster_totals.png" width="100%" />'
-//                    );
-//                }, function() {alert("INNER FAAAAIIIILLLL!")});
-//            }, function() {alert("OUTER FAAAAIIILLL!")});
-//        }, 1000);
-//    });
+    $(function() {
+        setTimeout(function() {
+            var query = (document.location.search).replace('?weaponId=','');
+
+            var db = window.openDatabase("hunterpedia", "1.0", "hunterpedia", 1000000);
+            db.transaction(function(tx) {
+                tx.executeSql('SELECT * FROM WEAPON WHERE id=' + query + '', [], function(rx, results) {
+                    var weapon = results.rows.item(0);
+                    var http = new XMLHttpRequest();
+                    http.open('HEAD', 'img/weapons/' + weapon.type + '/' + weapon.img_alias + '.png', false);
+                    http.send();
+                    var image = (http.status == 200) ? weapon.img_alias : "weaponSilhouette";
+                    $('#weaponContainer').append(
+                            '<h1>' + weapon.name + '</h1>' +
+                            '<img src="img/weapons/' + weapon.type + '/' + image + '.png" width="100%" />'
+                    );
+                }, function() {alert("INNER FAAAAIIIILLLL!")});
+            }, function() {alert("OUTER FAAAAIIILLL!")});
+        }, 1000);
+    });
 </script>
 </body>
 </html>
